deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"name":"jwt-sha256-1"}]},"output":{"containers":[{"limits":{"ephemeral-storage":"1Gi"},"requests":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"name":"jwt-sha256-1"}]},"modified":true}'
    autopilot.gke.io/warden-version: 3.0.42
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2024-12-13T15:39:54Z"
  generation: 3
  labels:
    app: jwt
  name: jwt
  namespace: default
  resourceVersion: "30478"
  uid: 7592c2de-878f-44fb-96ac-b596c114732a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: jwt
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: jwt
    spec:
      containers:
      - image: europe-north1-docker.pkg.dev/cicdtest-438007/javathesis23/jwt@sha256:bd94993c9d163b982205a594c51cd5a0991fc46bcb6d84368e8b04bfa65d21fe
        imagePullPolicy: IfNotPresent
        name: jwt-sha256-1
        resources:
          limits:
            ephemeral-storage: 1Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - NET_RAW
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: kubernetes.io/arch
        operator: Equal
        value: amd64
status:
  conditions:
  - lastTransitionTime: "2024-12-13T15:39:54Z"
    lastUpdateTime: "2024-12-13T15:41:30Z"
    message: ReplicaSet "jwt-7fb66d664c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-12-13T16:06:01Z"
    lastUpdateTime: "2024-12-13T16:06:01Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  observedGeneration: 3
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
