ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
  annotations:
    kubernetes.io/spec.ingressClassName: "gce"
spec:
  rules:
    - host: oskarjohansson.nu
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: library-service
                port:
                  number: 80
